# colormap-shaders

./: make_qrc.py  meson.build  shaders.qrc  shaders.qrc.template
include/colormap/private/IDL/: 16_Level.h  Beach.h  Black-White_Linear.h  Blue-Green-Red-Yellow.h  Blue-Pastel-Red.h  Blue-Red.h  Blue-Red_2.h  Blue-White_Linear.h  Blue_Waves.h  CB-Accent.h  CB-Blues.h  CB-BrBG.h  CB-BuGn.h  CB-BuPu.h  CB-Dark2.h  CB-GnBu.h  CB-Greens.h  CB-Greys.h  CB-OrRd.h  CB-Oranges.h  CB-PRGn.h  CB-Paired.h  CB-Pastel1.h  CB-Pastel2.h  CB-PiYG.h  CB-PuBu.h  CB-PuBuGn.h  CB-PuOr.h  CB-PuRd.h  CB-Purples.h  CB-RdBu.h  CB-RdGy.h  CB-RdPu.h  CB-RdYiBu.h  CB-RdYiGn.h  CB-Reds.h  CB-Set1.h  CB-Set2.h  CB-Set3.h  CB-Spectral.h  (+35 more)
include/colormap/private/MATLAB/: autumn.h  bone.h  cool.h  copper.h  hot.h  hsv.h  jet.h  parula.h  pink.h  spring.h  summer.h  winter.h
include/colormap/private/kbinani/: altitude.h
include/colormap/private/transform/: apricot.h  carnation.h  ether.h  grayscale_banded.h  hot_metal.h  lava_waves.h  malachite.h  morning_glory.h  peanut_butter_and_jerry.h  purple_haze.h  rainbow.h  rose.h  saturn.h  seismic.h  space.h  supernova.h
tool/: create_c++_header.sh  transcode.sh
